--- a/hw02-description.ipynb
+++ b/hw02-description.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f8326661-acb7-43d6-bfc3-73cbfb7083bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.10.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "from platform import python_version\n",
+    "\n",
+    "print(python_version())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fbfcf616-e096-42f0-99b3-6d0a933ce55b",
    "metadata": {},
